Fixed Fab button alignment of viewer

--- a/app/assets/stylesheets/viewerjs_themes/kadenze.css.scss
+++ b/app/assets/stylesheets/viewerjs_themes/kadenze.css.scss
@@ -94,6 +94,7 @@ $theme-prefix: 'kadenze' !default;
         -webkit-transition: all 0.5s ease-out;
         -moz-transition: all 0.5s ease-out;
         transition: all 0.5s ease-out;
+        display: block;
     }
 
     #canvasActions button:hover,
@@ -118,7 +119,7 @@ $theme-prefix: 'kadenze' !default;
 
     #canvasActions {
         position: fixed;
-        width: 60px;
+        width: 46px;
         top: 50%;
         right: 15px;
         text-align: right;
